tests-integration/tests/roundtrip/invalid/semantic/undeclared_idenfitier/01/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic_errors/undeclared_idenfitier/undeclared_identifier.essence:1:17:
  |
1 | find x : int(1..n)
  |                 ^
Error: Symbol not found "n"

